Postgres support + page transition animation
read the diffs my headache is too bad to make a good commit description
please send help

--- a/app/globals.css
+++ b/app/globals.css
@@ -68,3 +68,23 @@
         @apply bg-background text-foreground;
     }
 }
+
+
+body {
+    transition-property: opacity, transform, filter, background;
+    transition-timing-function: ease-in-out;
+    transition-duration: 500ms;
+}
+
+@media (prefers-reduced-motion) {
+    body {
+        transition: none !important;
+    }
+}
+
+.page-transition {
+    opacity: 0;
+    background: black;
+    transform: translateY(40px);
+    filter: blur(12px);
+}
